--- a/package.json
+++ b/package.json
@@ -1,22 +1,80 @@
 {
-  "name": "mkcafee",
-  "private": true,
-  "version": "0.0.0",
-  "type": "module",
-  "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview",
-    "watch": "nodemon"
+  "name": "tomasz-zieba-konesso-theme",
+  "version": "1.0.0",
+  "description": "Konesso Theme",
+  "author": "Konesso.pl",
+  "license": "ISC",
+  "dependencies": {
+    "autoprefixer": "7.1.1",
+    "babel-core": "^6.25.0",
+    "babel-loader": "7.1.1",
+    "babel-polyfill": "^6.23.0",
+    "babel-preset-es2015": "^6.24.1",
+    "barba.js": "^1.0.0",
+    "bootstrap": "4.0.0-alpha.6",
+    "bowser": "^2.11.0",
+    "cssnano": "^3.10.0",
+    "fuse": "^0.4.0",
+    "fuse.js": "^3.4.5",
+    "gulp": "^3.9.1",
+    "gulp-autoprefixer":"^3.0.1",
+    "gulp-babel": "^6.1.2",
+    "gulp-clean-css": "*",
+    "gulp-concat": "^2.6.1",
+    "gulp-dedupe": "0.0.2",
+    "gulp-gzip": "^1.4.2",
+    "gulp-htmlmin": "^5.0.1",
+    "gulp-ignore": "^2.0.2",
+    "gulp-imagemin": "^3.3.0",
+    "gulp-livereload": "^3.8.1",
+    "gulp-rename": "^1.2.2",
+    "gulp-sass": "*",
+    "gulp-sort": "^2.0.0",
+    "gulp-sourcemaps": "^2.6.1",
+    "gulp-strip-css-comments": "^2.0.0",
+    "gulp-svgo": "*",
+    "gulp-uglify": "^3.0.0",
+    "gulp-util": "^3.0.8",
+    "gulp-zip": "^4.1.0",
+    "json-loader": "^0.5.7",
+    "lazysizes": "^4.0.1",
+    "modernizr": "3.5.0",
+    "node-sass-export": "0.0.2",
+    "pixrem": "^3.0.2",
+    "placeholder-loading": "^0.2.2",
+    "select2": "^4.0.6-rc.1",
+    "slick-carousel": "^1.8.1",
+    "tippy": "0.0.0",
+    "tippy.js": "^6.2.7",
+    "tooltip": "^1.6.1",
+    "webfontloader": "^1.6.28",
+    "webpack": "^3.1.0",
+    "webpack-stream": "^3.2.0"
   },
   "devDependencies": {
-    "nodemon": "^3.0.1",
-    "vite": "^4.4.5"
+    "gulp-copy": "^4.0.1",
+    "gulp-delete-lines": "0.0.7",
+    "gulp-gzip": "^1.4.2",
+    "gulp-remove-empty-lines": "^0.1.0",
+    "gulp-replace": "^1.0.0",
+    "gulp-strip-comments": "^2.5.2",
+    "gulp-trimlines": "^1.0.1",
+    "gulp-uglify": "^3.0.2",
+    "gulp-zip": "^4.1.0",
+    "modernizr": "^3.6.0",
+    "modernizr-loader": "^1.0.1"
   },
-  "dependencies": {
-    "bootstrap": "^5.2.3",
-    "jquery": "^3.7.1",
-    "prettier": "2.0.5",
-    "sass": "^1.68.0"
-  }
+  "browserslist": [
+    "> 1%",
+    "ie >= 8",
+    "edge >= 15",
+    "ie_mob >= 10",
+    "ff >= 45",
+    "chrome >= 45",
+    "safari >= 7",
+    "opera >= 23",
+    "ios >= 7",
+    "android >= 4",
+    "bb >= 10"
+  ]
 }
